src/testData/analysis/escapes/octalEscapes.cr
"\52"

"<error descr="Octal value may not exceed 377 (decimal 255)">\400</error>"

"<error descr="Octal value may not exceed 377 (decimal 255)">\500</error>"

"<error descr="Octal value may not exceed 377 (decimal 255)">\1234</error>"

"\01001"